--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
 #root {
-  max-width: 100vw;
-  margin: 0 auto;
-  /* padding-top: 0vw; */
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+table {
+}
+
+input[type="text"] {
+  min-width: 60vw;
 }
